logs/leocornus.django.ploneproxy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/leocornus'...
Listing './lib/python3.5/site-packages/leocornus/django'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/authen'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/authen/handlers'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/locale'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/locale/en'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/locale/fr'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/middleware'...
Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/samples'...
Compiling './lib/python3.5/site-packages/leocornus/django/ploneproxy/samples/httplib2-mailpw.py'...
***   File "./lib/python3.5/site-packages/leocornus/django/ploneproxy/samples/httplib2-mailpw.py", line 24
    print content
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/leocornus/django/ploneproxy/samples/httplib2-pwreset.py'...
***   File "./lib/python3.5/site-packages/leocornus/django/ploneproxy/samples/httplib2-pwreset.py", line 28
    print content
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/leocornus/django/ploneproxy/samples/httplib2-test.py'...
***   File "./lib/python3.5/site-packages/leocornus/django/ploneproxy/samples/httplib2-test.py", line 34
    print content
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/leocornus/django/ploneproxy/templates'...
Listing './lib/python3.5/site-packages/leocornus.django.ploneproxy-0.1b2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
